@@ -5,8 +5,13 @@ ASSEMBLY = $(ADDIN_BUILD)/CBinding.dll
 REFS =  \
 	-pkg:glib-sharp-2.0 \
 	-pkg:gtk-sharp-2.0 \
-	-pkg:monodevelop \
 	-r:../../build/AddIns/MonoDevelop.SourceEditor.dll \
+	-r:../../build/bin/MonoDevelop.Components.dll \
+	-r:../../build/bin/MonoDevelop.Core.dll \
+	-r:../../build/bin/MonoDevelop.Core.Gui.dll \
+	-r:../../build/bin/MonoDevelop.Ide.dll \
+	-r:../../build/bin/MonoDevelop.Projects.dll \
+	-r:../../build/bin/MonoDevelop.Projects.Gui.dll \
 	-r:../../contrib/Mono.Addins.dll \
 	-r:Mono.Posix \
 	-r:System \
