@@ -4,6 +4,11 @@
     <images-root-path>../</images-root-path>
     <target-gtk-version>2.10.0</target-gtk-version>
   </configuration>
+  <import>
+    <widget-library name="../../../build/bin/MonoDevelop.Components.dll" />
+    <widget-library name="../../../build/bin/MonoDevelop.Ide.dll" />
+    <widget-library name="../../../build/bin/MonoDevelop.Projects.Gui.dll" />
+  </import>
   <widget class="Gtk.Bin" id="CBinding.CodeGenerationPanel" design-size="505 431">
     <property name="MemberName" />
     <child>
